--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1108,7 +1108,7 @@ testimonials
 
 #testimonials .item .testimonial-content {
   background: var(--primary-color);
-  background: linear-gradient(145deg, var(--primary-color) 0%, var(--title-color) 100%);
+  background: linear-gradient(145deg, var(--primary-color) 0%, var(--primary-color) 100%);
   margin-left: 60px;
   padding: 40px 30px;
   text-align: center;
@@ -1147,7 +1147,7 @@ testimonials
 #testimonials .author img {
   max-width: 120px;
   margin-bottom: -80px;
-  border: var(--quaternary-color) solid 7px;
+  border: var(--primary-color) solid 7px;
   border-radius: 50%;
   display: inline-block !important;
 }
